crates/panache-parser/tests/snapshots/yaml__yaml_suite_6PBE.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: 6PBE
input: "---\n?\n- a\n- b\n:\n- c\n- d\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
