crates/panache-parser/tests/snapshots/yaml__yaml_suite_6S55.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 6S55
input: "key:\n - bar\n - baz\n invalid\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_LEX_REQUIRED_SIMPLE_KEY_NOT_FOUND:could not find expected ':' for required simple key@20..20]
