crates/panache-parser/tests/snapshots/yaml__yaml_suite_6SLA.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 6SLA
input: "\"foo\\nbar:baz\\tx \\\\$%^&*()x\": 23\n'x\\ny:z\\tx $%^&*()x': 24\n"
has_error_contract: false
parsed_mapping_tree: true
