crates/panache-parser/tests/snapshots/yaml__yaml_suite_6VJK.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: 6VJK
input: ">\n Sammy Sosa completed another\n fine season with great stats.\n\n   63 Home Runs\n   0.288 Batting Average\n\n What a year!\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
