crates/panache-parser/tests/snapshots/yaml__yaml_suite_6WLZ.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: 6WLZ
input: "# Private\n---\n!foo \"bar\"\n...\n# Global\n%TAG ! tag:example.com,2000:app/\n---\n!foo \"bar\"\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
