crates/panache-parser/tests/snapshots/yaml__yaml_suite_6WPF.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: 6WPF
input: "---\n\"\n  foo \n \n    bar\n\n  baz\n\"\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
