crates/panache-parser/tests/snapshots/yaml__yaml_suite_735Y.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: 735Y
input: "-\n  \"flow in block\"\n- >\n Block scalar\n- !!map # Block collection\n  foo : bar\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
