crates/panache-parser/tests/snapshots/yaml__yaml_suite_74H7.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 74H7
input: "!!str a: b\nc: !!int 42\ne: !!str f\ng: h\n!!str 23: !!bool false\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
