crates/panache-parser/tests/snapshots/yaml__yaml_suite_753E.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: 753E
input: "--- |-\n ab\n \n \n...\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
